# RFM

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: rfm.db
data/processed/: rfm_scores.csv
data/raw/: joined_orders.csv
notebooks/: 01_EDA.ipynb
sql/: create_tables.sql
sql/queries/: extract_orders.sql
src/: data_engineering.py  rfm.py  run_pipeline.py  synthetic_data.py  utils.py
src/rfm_analysis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_rfm.py
